WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91225
Fix checking for optional DeviceOrientationEvent.absolute in JSC bindings
https://bugs.webkit.org/show_bug.cgi?id=91225
Summary
Fix checking for optional DeviceOrientationEvent.absolute in JSC bindings
Olivier Blin
Reported
2012-07-13 05:54:25 PDT
Fix checking for optional DeviceOrientationEvent.absolute
Attachments
Patch
(1.86 KB, patch)
2012-07-13 06:09 PDT
,
Olivier Blin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2012-07-13 06:04:26 PDT
This issue comes from
r105036
Olivier Blin
Comment 2
2012-07-13 06:09:33 PDT
Created
attachment 152237
[details]
Patch
Steve Block
Comment 3
2012-07-13 06:40:10 PDT
Comment on
attachment 152237
[details]
Patch thanks!
Steve Block
Comment 4
2012-07-13 06:41:17 PDT
Was this failing a test? I'm not sure whether we run any DeviceOrientation tests with JSC. If it wasn't failing a test, please consider adding such a test.
WebKit Review Bot
Comment 5
2012-07-13 06:53:42 PDT
Comment on
attachment 152237
[details]
Patch Clearing flags on attachment: 152237 Committed
r122572
: <
http://trac.webkit.org/changeset/122572
>
WebKit Review Bot
Comment 6
2012-07-13 06:53:48 PDT
All reviewed patches have been landed. Closing bug.
Olivier Blin
Comment 7
2012-07-13 07:08:03 PDT
No, it was not failing a test, I just spotted this by reading the code. I did not see a test about DeviceOrientationEvent.absolute in v8 either.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug