Fix checking for optional DeviceOrientationEvent.absolute in JSC bindings https://bugs.webkit.org/show_bug.cgi?id=91225

Patch by Olivier Blin <olivier.blin@softathome.com> on 2012-07-13
Reviewed by Steve Block.

This issue comes from r105036

* bindings/js/JSDeviceOrientationEventCustom.cpp:
(WebCore::JSDeviceOrientationEvent::initDeviceOrientationEvent):

Canonical link: https://commits.webkit.org/109045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122572 268f45cc-cd09-0410-ab3c-d52691b4dbfc